--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <hr>
         <article>
             <h1 style="text-align: center;">Portátil - ASUS ZenBook 14 OLED UX3402VA-KM005W</h1>
-            <img class = "imagenes"src="imagenes/asus.png" alt="Portátil ASUS ZenBook">
+            <img class = "imagenes"src="https://dlcdnwebimgs.asus.com/gain/7587b7be-cc5d-405d-8882-4b89ae85ba97/w800" alt="Portátil ASUS ZenBook">
             <h3 id="descipcion">Descripción del producto:</h3>
             <ul>
                 <li>Alta velocidad y rendimiento</li>
